--- a/FE1_Restaurant_Food/index.html
+++ b/FE1_Restaurant_Food/index.html
@@ -15,6 +15,33 @@
 </head>
 <body>
     
+<!-- Header  sections starts-->
+
+<header>
+    <a href="#" class="logo"><i class="fas fa-utensils">Resto.</i></a>
+
+    <nav class="navbar">
+        <a class="active" href="#home">Home</a>
+        <a href="#dishes">Dishes</a>
+        <a href="#about">About</a>
+        <a href="#menu">Menu</a>
+        <a href="#review">Review</a>
+        <a href="#order">Order</a>
+    </nav>
+
+    <div class="icons">
+        <i class="fas fa-bars" id="menu-bars"></i>
+        <i class="fas fa-search" id="search-icon"></i>
+        <a href="#" class="fas fa-heart"></a>
+        <a href="#" class="fas fa-shopping-cart"></a>
+    </div>
+</header>
+
+
+
+<!-- Header  sections ends-->
+
+
 </body>
 <!-- custom js file link -->
 <script src="js/app.js"></script>
