FE_1_Restaurant_Food: header section and search bar

--- a/FE1_Restaurant_Food/index.html
+++ b/FE1_Restaurant_Food/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     
-<!-- Header  sections starts-->
+<!-- Header sections starts-->
 
 <header>
     <a href="#" class="logo"><i class="fas fa-utensils">Resto.</i></a>
@@ -41,6 +41,12 @@
 
 <!-- Header  sections ends-->
 
+<!-- search form -->
+<form action="" id="search-form">
+    <input type="search" name="" id="search-box" placeholder="search here...">
+    <label for="search-box" class="fas fa-search"></label>
+    <i class="fas fa-times" id="close"></i>
+</form> 
 
 </body>
 <!-- custom js file link -->
