--- a/FE1_Restaurant_Food/index.html
+++ b/FE1_Restaurant_Food/index.html
@@ -620,12 +620,12 @@
 
         <div class="box">
             <h3>quick links</h3>
-            <a href="#">home</a>
-            <a href="#">dishes</a>
-            <a href="#">about</a>
-            <a href="#">menu</a>
-            <a href="#">review</a>
-            <a href="#">order</a>
+            <a href="#home">home</a>
+            <a href="#dishes">dishes</a>
+            <a href="#about">about</a>
+            <a href="#menu">menu</a>
+            <a href="#review">review</a>
+            <a href="#order">order</a>
         </div>
 
         <div class="box">
@@ -648,6 +648,11 @@
 
 </section>
 <!-- footer section ends -->
+
+<!-- loader part -->
+<div class="loader-container">
+    <img src="images/loader.gif" alt="Loader">
+</div>
 </body>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
