--- a/FE2_Restaurant_Mutiple_Pages/index.html
+++ b/FE2_Restaurant_Mutiple_Pages/index.html
@@ -89,6 +89,49 @@
             </div>
         </div>
     </section>
+    <!-- End Hero section -->
+
+    <!-- Store Info section -->
+    <section class="storeInfo" data-aos="fade-up">
+        <div class="container">
+            <div class="storeInfo__wrapper">
+                <div class="storeInfo__item">
+                    <div class="storeInfo__icon">
+                        <img src="images/wall-clock-icon.svg" alt="icon">
+                    </div>
+                    <h3 class="storeInfo__title">
+                        10PM - 7PM
+                    </h3>
+                    <p class="storeInfo__text">
+                        Opening Hour
+                    </p>
+                </div>
+                <div class="storeInfo__item">
+                    <div class="storeInfo__icon">
+                        <img src="images/address-icon.svg" alt="icon">
+                    </div>
+                    <h3 class="storeInfo__title">
+                        IT1-05, SoICT, HUST
+                    </h3>
+                    <p class="storeInfo__text">
+                        Address
+                    </p>
+                </div>
+                <div class="storeInfo__item">
+                    <div class="storeInfo__icon">
+                        <img src="images/phone-icon.svg" alt="icon">
+                    </div>
+                    <h3 class="storeInfo__title">
+                        +84 979 832 446
+                    </h3>
+                    <p class="storeInfo__text">
+                        Call Now
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Store End section -->
 
     <!-- Footer -->
     <footer>
