--- a/FE2_Restaurant_Mutiple_Pages/index.html
+++ b/FE2_Restaurant_Mutiple_Pages/index.html
@@ -133,6 +133,62 @@
     </section>
     <!-- Store End section -->
 
+
+    <!-- Our Specials Section -->
+    <section id="ourSpecials" class="ourSpecials" data-aos="fade-up">
+        <div class="container">
+            <div class="ourSpecials__wrapper">
+                <div class="ourSpecials__left">
+                    <div class="ourSpecials__item">
+                        <div class="ourSpecials__item__img">
+                            <img src="images/food-3.png" alt="Food 3 image">
+                        </div>
+                        <div class="ourSpecials__item__title">Sweet Potato Fries Bowl</div>
+                        <h3 class="ourSpecials__item__price">$18</h3>
+                        <div class="ourSpecials__item__stars">
+                            <img src="images/3star.png" alt="3star image">
+                        </div>
+                        <p class="ourSpecials__item__text">
+                            These Sweet Potato Fries bowl are a glorious
+                            messy plate of goodness. Crispy sweet potato 
+                            fries loaded with lots of fresh summer vegetables 
+                            and a lime ranch. By adding a seasoning blend with 
+                            chiptle powder, garlic, and onion, these spicy 
+                            sweet potato fries are full of flavor.
+                        </p>
+                    </div>
+                    <div class="ourSpecials__item">
+                        <div class="ourSpecials__item__img">
+                            <img src="images/food-3.png" alt="Food 3 image">
+                        </div>
+                        <div class="ourSpecials__item__title">Sweet Potato Fries Bowl</div>
+                        <h3 class="ourSpecials__item__price">$18</h3>
+                        <div class="ourSpecials__item__stars">
+                            <img src="images/3star.png" alt="3star image">
+                        </div>
+                        <p class="ourSpecials__item__text">
+                            These Sweet Potato Fries bowl are a glorious
+                            messy plate of goodness. Crispy sweet potato
+                            fries loaded with lots of fresh summer vegetables
+                            and a lime ranch. By adding a seasoning blend with
+                            chiptle powder, garlic, and onion, these spicy
+                            sweet potato fries are full of flavor.
+                        </p>
+                    </div>
+                </div>
+                <div class="ourSpecials__right">
+                    <h2 class="ourSpecials__title">Our Specials</h2>
+                    <p class="ourSpecials__text">
+                        All of our food id prepared daily at our restaurant to ensure the highest quality,
+                        freshest meals are delivered to our customers
+                    </p>
+                    <a href="./booking.html" class="btn primary-btn">Book Table</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Our Specials Section -->
+
     <!-- Footer -->
     <footer>
         <div class="container">
