--- a/FE2_Restaurant_Mutiple_Pages/index.html
+++ b/FE2_Restaurant_Mutiple_Pages/index.html
@@ -189,6 +189,62 @@
     </section>
     <!-- End Our Specials Section -->
 
+
+    <!-- Top Dishes Section -->
+    <section id="dishGrid" data-aos="fade-up">
+        <div class="container">
+            <h2 class="dishGrid__title">
+                Top Dishes
+            </h2>
+            <div class="dishGrid__wrapper">
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Top Dishes Section -->
+
+
     <!-- Footer -->
     <footer>
         <div class="container">
