FE2_Restaurant_Multiple_Pages: Discount Section

--- a/FE2_Restaurant_Mutiple_Pages/index.html
+++ b/FE2_Restaurant_Mutiple_Pages/index.html
@@ -244,7 +244,36 @@
     </section>
     <!-- End Top Dishes Section -->
 
-
+    <!-- Discount Section -->
+    <section class="discount" id="discount" data-aos="fade-up">
+        <div class="container">
+            <div class="discount__wrapper">
+                <div class="discount__images">
+                    <div class="discount__img1">
+                        <img src="images/food-5.png" alt="food img 5">
+                    </div>
+                    <div class="discount__img2">
+                        <img src="images/food-4.png" alt="food img 4">
+                    </div>
+                    <div class="discount__img3">
+                        <img src="images/food-3.png" alt="food img 3">
+                    </div>
+                </div>
+                <div class="discount__info">
+                    <h3 class="discount__text">20% OFF</h3>
+                    <h3 class="discount__title">Demo dish for discount</h3>
+                    <h3 class="discount__price">
+                        <span class="discount__oldPrice">$45</span>
+                        <span class="discount__onewPrice">$35</span>
+                    </h3>
+                    <div class="discount__stars">
+                        <img src="images/3star.png" alt="3 stars">
+                    </div>
+                    <a href="booking.html" class="btn primary-btn">Book Table</a>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Footer -->
     <footer>
         <div class="container">
