--- a/FE2_Restaurant_Mutiple_Pages/index.html
+++ b/FE2_Restaurant_Mutiple_Pages/index.html
@@ -274,6 +274,75 @@
             </div>
         </div>
     </section>
+    <!-- End Discount Section -->
+
+    <!-- Events Media Section -->
+    <section id="eventsMedia" class="eventsMedia" data-aos="fade-up">
+        <div class="container">
+            <div class="eventsMedia__wrapper">
+                <div class="eventsMedia__1">
+                    <img src="images/eventsMedia1.png" alt="events">
+                    <a href="#" class="eventsMedia__1__playButton">
+                        <img src="images/playIcon.svg" alt="Play icon">
+                    </a>
+                </div>
+                <div class="eventsMedia__2">
+                    <img src="images/eventsMedia2.png" alt="Event media 2">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Events Media Section -->
+
+    <!-- Events Info Section -->
+    <section class="eventsInfo" id="eventsInfo" data-aos="fade-up">
+        <div class="container">
+           <div class="eventsInfo__wrapper">
+                <div class="eventsInfo__left">
+                    <div class="eventsInfo__item">
+                        <div class="eventsInfo__item__img">
+                            <img src="images/event-corporate.png" alt="events">
+                        </div>
+                        <div class="eventsInfo__item__info">
+                            <h2 class="eventsInfo__item__title">Corporate Events</h2>
+                            <p class="eventsInfo__item__text">
+                                TienCM is the perfect venue for your 
+                                corporate events. We specialize in private 
+                                parties.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="eventsInfo__item">
+                        <div class="eventsInfo__item__img">
+                            <img src="images/event-weedings.png" alt="events">
+                        </div>
+                        <div class="eventsInfo__item__info">
+                            <h2 class="eventsInfo__item__title">Wedding</h2>
+                            <p class="eventsInfo__item__text">
+                                TienCM offers an intimately unique
+                                wedding experience set in a spectacular setting
+                                that is sophisticated and comfortable.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="eventsInfo__right">
+                    <h2 class="eventsInfo__title">
+                        Books For Events
+                    </h2>
+                    <p class="eventsInfo__text">
+                        Book your private event or cororate function at 
+                        TienCM's cuisine to experience a truly 
+                        unique experience.
+                    </p>
+                    <a href="./contact.html" class="btn primary-btn">Contact Now</a>
+                </div>
+           </div>
+        </div>
+    </section>
+
+    <!-- End Events Info Section -->
+
     <!-- Footer -->
     <footer>
         <div class="container">
