FE2_Restaurant_Multiple_Pages: Why Us Section

--- a/FE2_Restaurant_Mutiple_Pages/index.html
+++ b/FE2_Restaurant_Mutiple_Pages/index.html
@@ -340,8 +340,54 @@
            </div>
         </div>
     </section>
-
     <!-- End Events Info Section -->
+
+    <!-- Why us Section -->
+    <section id="whyUs" class="whyUs">
+        <div class="whyUs__wrapper">
+            <div class="whyUs__left">
+                <h2 class="whyUs__title">
+                    Why Choose Our Food
+                </h2>
+                <p class="whyUs__text">
+                    Quality of Service, Food, Ambiance, and Value of Money
+                    are the primary elements for choosing a restaurant.
+                    TienCM's cuisine is one of the most exquisite 
+                    fine-dinning restaurant in Chittagong cities with a
+                    captivation view of FEC Wills, perfect ambiance, and scrupmtious food. 
+                </p>
+            </div>
+            <div class="whyUs__right">
+                <div class="whyUs__items__wrapper">
+                    <div class="whyUs__item">
+                        <div class="whyUs__item__icon">
+                            <img src="images/whyUs-icon1.svg" alt="Quality Food icon">
+                        </div>
+                        <p class="whyUs__item__text">Quality Food</p>
+                    </div>
+                    <div class="whyUs__item">
+                        <div class="whyUs__item__icon">
+                            <img src="images/whyUs-icon2.svg" alt="Classical taste icon">
+                        </div>
+                        <p class="whyUs__item__text">Classical taste</p>
+                    </div>
+                    <div class="whyUs__item">
+                        <div class="whyUs__item__icon">
+                            <img src="images/whyUs-icon3.svg" alt="Skilled chef icon">
+                        </div>
+                        <p class="whyUs__item__text">Skilled chef</p>
+                    </div>
+                    <div class="whyUs__item">
+                        <div class="whyUs__item__icon">
+                            <img src="images/whyUs-icon4.svg" alt="Best service icon">
+                        </div>
+                        <p class="whyUs__item__text">Best service</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Why us Section -->
 
     <!-- Footer -->
     <footer>
