--- a/FE2_Restaurant_Mutiple_Pages/index.html
+++ b/FE2_Restaurant_Mutiple_Pages/index.html
@@ -343,7 +343,7 @@
     <!-- End Events Info Section -->
 
     <!-- Why us Section -->
-    <section id="whyUs" class="whyUs">
+    <section id="whyUs" class="whyUs" data-aos="fade-up">
         <div class="whyUs__wrapper">
             <div class="whyUs__left">
                 <h2 class="whyUs__title">
@@ -388,6 +388,82 @@
         </div>
     </section>
     <!-- End Why us Section -->
+
+    <!-- Testimonial Section -->
+    <section class="testimonial" id="testimonial" data-aos="fade-up">
+        <div class="container">
+            <div class="testimonial__wrapper">
+                <h2 class="testimonial__title">What our customers say</h2>
+                <div class="testimonial__items__wrapper">
+                    <div class="testimonial__item">
+                        <div class="testimonial__item__img">
+                            <img src="images/testimonial_img1.png" alt="saved ahmed">
+                        </div>
+                        <div class="testimonial__item__info">
+                            <h3 class="testimonial__item__name">Sayed Ahmed</h3>
+                            <div class="testimonial__item__stars">
+                                <img src="images/3star.png" alt="stars">
+                            </div>
+                            <p class="testimonial__item__text">
+                                "Visited TienCM's Cuisine with friends last Sunday. Really 
+                                lovely meal and very warm welcome - we would
+                                recommend this lovely restaurant and will try to go back again"
+                            </p>
+                        </div>
+                    </div>
+                    <div class="testimonial__item">
+                        <div class="testimonial__item__img">
+                            <img src="images/testimonial_img1.png" alt="saved ahmed">
+                        </div>
+                        <div class="testimonial__item__info">
+                            <h3 class="testimonial__item__name">Sayed Ahmed</h3>
+                            <div class="testimonial__item__stars">
+                                <img src="images/3star.png" alt="stars">
+                            </div>
+                            <p class="testimonial__item__text">
+                                "Visited TienCM's Cuisine with friends last Sunday. Really
+                                lovely meal and very warm welcome - we would
+                                recommend this lovely restaurant and will try to go back again"
+                            </p>
+                        </div>
+                    </div>
+                    <div class="testimonial__item">
+                        <div class="testimonial__item__img">
+                            <img src="images/testimonial_img1.png" alt="saved ahmed">
+                        </div>
+                        <div class="testimonial__item__info">
+                            <h3 class="testimonial__item__name">Sayed Ahmed</h3>
+                            <div class="testimonial__item__stars">
+                                <img src="images/3star.png" alt="stars">
+                            </div>
+                            <p class="testimonial__item__text">
+                                "Visited TienCM's Cuisine with friends last Sunday. Really
+                                lovely meal and very warm welcome - we would
+                                recommend this lovely restaurant and will try to go back again"
+                            </p>
+                        </div>
+                    </div>
+                    <div class="testimonial__item">
+                        <div class="testimonial__item__img">
+                            <img src="images/testimonial_img1.png" alt="saved ahmed">
+                        </div>
+                        <div class="testimonial__item__info">
+                            <h3 class="testimonial__item__name">Sayed Ahmed</h3>
+                            <div class="testimonial__item__stars">
+                                <img src="images/3star.png" alt="stars">
+                            </div>
+                            <p class="testimonial__item__text">
+                                "Visited TienCM's Cuisine with friends last Sunday. Really
+                                lovely meal and very warm welcome - we would
+                                recommend this lovely restaurant and will try to go back again"
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Testimonial Section -->
 
     <!-- Footer -->
     <footer>
