FE2_Restaurant_Multiple_Pages: New Letters Section

--- a/FE2_Restaurant_Mutiple_Pages/index.html
+++ b/FE2_Restaurant_Mutiple_Pages/index.html
@@ -465,6 +465,28 @@
     </section>
     <!-- End Testimonial Section -->
 
+    <!-- Newsletter section  -->
+    <section id="newsletter" class="newsletter" data-aos="fade-up">
+        <div class="container">
+            <div class="newsletter__wrapper">
+                <div class="newsletter__info">
+                    <h3 class="newsletter__title">Join Newsletter</h3>
+                    <p class="newsletter__text">Get notified with the latest news 
+                        and recent offers from the TienCM's Cuisine</p>
+                </div>
+                <div class="newsletter__form">
+                    <form>
+                        <label for="email">
+                            <input type="email" placeholder="Your Email Address">
+                        </label>
+                        <button type="submit">Join</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Newsletter section  -->
+
     <!-- Footer -->
     <footer>
         <div class="container">
