FE2_Restaurant_Multiple_Pages: Menu Page

--- a/FE2_Restaurant_Mutiple_Pages/menu.html
+++ b/FE2_Restaurant_Mutiple_Pages/menu.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="globalStyles.css">
     <link rel="stylesheet" href="components.css">
-
+    <link rel="stylesheet" href="menu.css">
     <!-- font awesome cdn link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         crossorigin="anonymous" referrerpolicy="no-referrer">
 
     <!-- aos css: scroll animated -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -65,6 +65,353 @@
     </div>
     <!-- End Nav Section -->
 
+    <!-- page title -->
+    <section id="page__title" class="page__title" data-aos="fade-up">
+        <div class="container">
+            <h2 class="page__title__text">
+                Explore Our Menu
+            </h2>
+        </div>
+    </section>
+    <!-- end page title -->
+
+    <!-- our specials selection -->
+    <section id="ourSpecials" class="ourSpecials" data-aos="fade-up">
+        <div class="container">
+            <h3 class="ourSpecials__title">Our Specials</h3>
+            <div class="ourSpecials__wrapper">
+                <div class="ourSpecials__item">
+                    <div class="ourSpecials__item__img">
+                        <img src="images/food-3.png" alt="food img">
+                    </div>
+                    <div class="ourSpecials__item__info">
+                        <h3 class="ourSpecials__item__title">
+                            Sweet Potato Fries Bowl
+                        </h3>
+                        <h4 class="ourSpecials__item__price">$12</h4>
+                        <div class="ourSpecials__item__stars">
+                            <img src="./images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="ourSpecials__item">
+                    <div class="ourSpecials__item__img">
+                        <img src="./images/food-1.png" alt="food img">
+                    </div>
+                    <div class="ourSpecials__item__info">
+                        <h3 class="ourSpecials__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h4 class="ourSpecials__item__price">$12</h4>
+                        <div class="ourSpecials__item__stars">
+                            <img src="./images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end our specials selection -->
+
+    <!-- Top Dishes Section -->
+    <section id="dishGrid" data-aos="fade-up">
+        <div class="container">
+            <h2 class="dishGrid__title">
+                Top Dishes
+            </h2>
+            <div class="dishGrid__wrapper">
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Top Dishes Section -->
+
+    <!-- Breakfast Section -->
+    <section id="dishGrid" data-aos="fade-up">
+        <div class="container">
+            <h2 class="dishGrid__title">
+                Breakfast
+            </h2>
+            <div class="dishGrid__wrapper">
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Breakfast Section -->
+
+    <!-- Lunch Section -->
+    <section id="dishGrid" data-aos="fade-up">
+        <div class="container">
+            <h2 class="dishGrid__title">
+                Lunch
+            </h2>
+            <div class="dishGrid__wrapper">
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Lunch Section -->
+
+    <!-- Dinner Section -->
+    <section id="dishGrid" data-aos="fade-up">
+        <div class="container">
+            <h2 class="dishGrid__title">
+                Dinner
+            </h2>
+            <div class="dishGrid__wrapper">
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="dishGrid__item">
+                    <div class="dishGrid__item__img">
+                        <img src="images/food-1.png" alt="food img">
+                    </div>
+                    <div class="dishGrid__item__info">
+                        <h3 class="dishGrid__item__title">
+                            Vegan Salad bowl
+                        </h3>
+                        <h3 class="dishGrid__item__price">$13</h3>
+                        <div class="dishGrid__item__stars">
+                            <img src="images/3star.png" alt="3 stars">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Dinner Lunch Section -->
 
     <!-- Footer -->
     <footer>
@@ -184,7 +531,7 @@
 
 
     <!-- aos script -->
-    <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
     <!-- custome script -->
     <script src="main.js"></script>
