FE2_Restaurant_Multiple_Pages: About Page

--- a/FE2_Restaurant_Mutiple_Pages/about.html
+++ b/FE2_Restaurant_Mutiple_Pages/about.html
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="globalStyles.css">
     <link rel="stylesheet" href="components.css">
+    <link rel="stylesheet" href="about.css">
 
     <!-- font awesome cdn link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         crossorigin="anonymous" referrerpolicy="no-referrer">
 
     <!-- aos css: scroll animated -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -65,6 +66,71 @@
     </div>
     <!-- End Nav Section -->
 
+    <!-- Our Story -->
+    <section class="ourStory" id="ourStory" data-aos="fade-up">
+        <div class="container">
+            <div class="ourStory__wrapper">
+                <div class="ourStory__img">
+                    <img src="images/ourStoryImg.png" alt="TienCM's Cuisine">
+                </div>
+                <div class="ourStory__info">
+                    <h3 class="ourStory__title">
+                        Our Story
+                    </h3>
+                    <p class="ourStory__subtitle">
+                        It's all started since 1998
+                    </p>
+                    <p class="ourStory__text">
+                        Welcome to TienCM's Cuisine. We take pride in delivering
+                        warm, friendly service and creating mouth-watering
+                        culimary delights for all. Using only the freshest
+                        locally sourced ingredients, we'll ensure you have a
+                        dining experience to remember.
+                        <br />
+                        Since 2008, we are the perfect place for a romantic meal for two, a
+                        catch-up with friends, family parites, business meetings, and
+                        affordable prices, and seating for up to 65 guests, we can cater
+                        for all occasions.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Our Story -->
+
+    <!-- Our Goals -->
+    <section id="ourGoals" class="ourGoals"m data-aos="fade-down">
+        <div class="container">
+            <div class="ourGoals__info">
+                <h3 class="ourGoals__title">
+                    Our Goals
+                </h3>
+                <p class="ourGoals__text">
+                    We shall sell delicious and remarkable food and
+                    beverages that meet the highest quality, 
+                    freshness, and seasonality criteria while comnining
+                    modern-creative and classic cooking traditions.
+                    By showcasing warmth, graciousness, efficiency, skill, professionalism,
+                    and integrity in our work, we will continually 
+                    serve out consumers with exceptional service. To have every 
+                    customer who comes through our doors leave impressed by 
+                    their experience ai TienCM's Cuisine and excited to come back again.
+                </p>
+            </div>
+            <div class="ourGoals__imgs__wrapper">
+                <div class="ourGoals__img1">
+                    <img src="images/ourGoals_img1.png" alt="Our Goals 1">
+                </div>
+                <div class="ourGoals__img2">
+                    <img src="images/ourGoals_img2.png" alt="Our Goals 2">
+                </div>
+                <div class="ourGoals__img3">
+                    <img src="images/ourGoals_img3.png" alt="Our Goals 3">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Our Goals -->
 
     <!-- Footer -->
     <footer>
@@ -184,7 +250,7 @@
 
 
     <!-- aos script -->
-    <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
     <!-- custome script -->
     <script src="main.js"></script>
