--- a/FE2_Restaurant_Mutiple_Pages/contact.html
+++ b/FE2_Restaurant_Mutiple_Pages/contact.html
@@ -17,7 +17,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
 
     <!-- aos css: scroll animated -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -65,6 +65,81 @@
     </div>
     <!-- End Nav Section -->
 
+    <!-- Store Info Section -->
+    <section class="storeInfo" data-aos="fade-up">
+        <div class="container">
+            <div class="storeInfo__wrapper">
+                <div class="storeInfo__item">
+                    <div class="storeInfo__icon">
+                        <img src="images/wall-clock-icon.svg" alt="icon">
+                    </div>
+                    <h3 class="storeInfo__title">
+                        10PM - 7PM
+                    </h3>
+                    <p class="storeInfo__text">
+                        Opening Hour
+                    </p>
+                </div>
+                <div class="storeInfo__item">
+                    <div class="storeInfo__icon">
+                        <img src="images/address-icon.svg" alt="icon">
+                    </div>
+                    <h3 class="storeInfo__title">
+                        IT1-05, SoICT, HUST
+                    </h3>
+                    <p class="storeInfo__text">
+                        Address
+                    </p>
+                </div>
+                <div class="storeInfo__item">
+                    <div class="storeInfo__icon">
+                        <img src="images/phone-icon.svg" alt="icon">
+                    </div>
+                    <h3 class="storeInfo__title">
+                        +84 979 832 446
+                    </h3>
+                    <p class="storeInfo__text">
+                        Call Now
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Store Info Section -->
+
+    <!-- Contact Form Section -->
+    <section class="form" id="form" data-aos="fade-down">
+        <div class="container">
+            <h3 class="form__title">Contact & Inquiry</h3>
+            <div class="form__wrapper">
+                <form class="form">
+                    <div class="form__group">
+                        <label for="firstName">First Name</label>
+                        <input type="text" id="firstName" name="first_name" required>
+                    </div>
+                    <div class="form__group">
+                        <label for="lastName">Last Name</label>
+                        <input type="text" id="lastName" name="last_name" required>
+                    </div>
+                    <div class="form__group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form__group">
+                        <label for="subject">Subject</label>
+                        <input type="text" id="subject" name="subject" required>
+                    </div>
+                    <div class="form__group form__group__full">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                    </div>
+                    <!-- <button>Sens</button> -->
+                    <button type="submit" class="btn primary-btn">Send</button>
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- End Contact Form Section -->
 
     <!-- Footer -->
     <footer>
@@ -184,7 +259,7 @@
 
 
     <!-- aos script -->
-    <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
     <!-- custome script -->
     <script src="main.js"></script>
